dnl Process this file with autoconf to produce a configure script.
AC_INIT(Clients/ConImp.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LN_S
AC_CHECK_PROGS(LINT, lint lclint)
AC_CHECK_PROGS(AR, ar)
AC_PATH_X
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, main)
dnl Replace `main' with a function in -lcrypt:
AC_CHECK_LIB(crypt, main)
dnl Replace `main' with a function in -lgcc:
AC_CHECK_LIB(gcc, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h stdarg.h stdlib.h string.h strings.h sys/time.h termio.h termios.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(bcopy bzero crypt gethostname index memcpy select socket strchr strstr)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile gSCodes Include/Makefile Library/Makefile ImpCre/Makefile Servers/Makefile Clients/Makefile)
